[package]
name = "hackweek-changetogether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.3.23"
edit-distance = "2.1.0"
git2 = "0.17.2"
lazy_static = "1.4.0"
regex = "1.9.3"
structopt = "0.3"
substring = "1.4.5"
tempfile = "3.8.0"
thiserror = "1.0.47"
